assets/stylesheets/discourse-hide-categories.scss
.hide-categories {
  thead {
    th {
      padding-bottom: 0.5em;
    }
  }
  input {
    width: 4em;
    @include breakpoint(mobile-extra-large) {
      width: 2em;
    }
  }
  #rc-scroll-anchor {
    padding: 0;
  }
  table {
    padding-bottom: 150px;
    margin: 0 0.667em;
    text-align: justify;
    tr.input {
      border-bottom: none;
    };
    tr.input td {
      font-size: 100%;
      padding: 0.25em 0em 0em 0;
    }
    tr.instructions {
      max-width: 22.5em;
      border-top: none;
      display: table-row;
    }
    tr.instructions td {
      max-width: 25em;
      font-size: 80%;
      overflow-wrap: break-word;
      word-break: keep-all;
      color: $primary-medium;
      pointer-events: none;
    }
  }
  .badge-wrapper span.badge-category {
    max-width: 20em;
    @include breakpoint(mobile-extra-large) {
      max-width: 30vw;
    }
  }
}

.hide-categories-depth-1 {
  margin-left: 20px;
}

.hide-categories-depth-2 {
  margin-left: 40px;
}

